# dash-react-font-awesome-icon-picker

./: DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  Project.toml  README.md  _validate_init.py  index.html  package-lock.json  package.json  pyproject.toml  usage.py
R/: dashIconPicker.R  dashIconPickerItem.R  dashReactFontAwesomeIconPicker.R  iconPicker.R  iconPickerItem.R  internal.R
dash_react_font_awesome_icon_picker/: DashIconPicker.py  DashIconPickerItem.py  DashReactFontAwesomeIconPicker.py  __init__.py  _imports_.py  dash_react_font_awesome_icon_picker.min.js  dash_react_font_awesome_icon_picker.min.js.map  iconPicker.py  iconPickerItem.py  metadata.json  package-info.json
man/: dashIconPicker.Rd  dashIconPickerItem.Rd  dashReactFontAwesomeIconPicker.Rd  iconPicker.Rd  iconPickerItem.Rd
src/: dashiconpicker.jl  dashiconpickeritem.jl  dashreactfontawesomeiconpicker.jl  iconpicker.jl  iconpickeritem.jl
src/demo/: App.js
src/jl/: dashiconpicker.jl  dashiconpickeritem.jl
src/lib/: index.js
src/lib/components/: DashIconPicker.react.js  DashIconPickerItem.react.js
