[tool.poetry]
name = "dash_react_font_awesome_icon_picker"
version = "0.1.0"
description = "dash port of react-font-awesome-icon-picker"
authors = ["Jon Thompson <jjt@tutanota.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
dash = "^2.0.0"

[tool.poetry.group.dev.dependencies]
dash = "^2.13.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
